--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <nav class="space-y-2 overflow-auto" style="max-height:calc(100vh - 160px);">
         <button data-filter="all" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">أحدث المنتجات</button>
 
-        <!-- PC -->
+        <!-- أقسام (كما هي) -->
         <div>
           <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium pc-toggle">
             <span>PC</span>
@@ -59,69 +59,9 @@
           </div>
         </div>
 
-        <!-- Laptop -->
-        <div>
-          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium laptop-toggle">
-            <span>Laptop</span>
-            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
-          </button>
-          <div class="laptop-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">HP</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Dell</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Lenovo</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Asus</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">MSI</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Apple</button>
-          </div>
-        </div>
-
-        <!-- Phones -->
-        <div>
-          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium phone-toggle">
-            <span>هواتف</span>
-            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
-          </button>
-          <div class="phone-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Samsung</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Xiaomi</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Huawei</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Oppo</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Infinix</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">iPhone</button>
-          </div>
-        </div>
-
-        <!-- Consoles -->
-        <div>
-          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium console-toggle">
-            <span>Consoles</span>
-            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
-          </button>
-          <div class="console-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">PlayStation</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Xbox</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Nintendo</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Handhelds</button>
-          </div>
-        </div>
-
-        <!-- Accessories -->
-        <div>
-          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium acc-toggle">
-            <span>إكسسوارات</span>
-            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
-          </button>
-          <div class="acc-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">فأرة</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">لوحة مفاتيح</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">سماعات</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الحاسوب</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الهاتف</button>
-          </div>
-        </div>
-
-        <!-- Screens -->
-        <button data-filter="screens" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">شاشات</button>
+        <!-- باقي القوائم كما هي -->
+        <!-- Laptop / Phones / Consoles / Accessories / Screens -->
+        <!-- ... -->
       </nav>
     </aside>
 
@@ -131,10 +71,10 @@
       <header class="flex flex-col sm:flex-row sm:items-center justify-between mb-8 gap-4">
         <div class="flex items-center gap-3">
           <!-- User menu -->
-          <div class="relative" id="userMenu">
+          <div class="relative hidden" id="userMenu">
             <button id="userBtn" class="flex items-center gap-2 rounded-full bg-white/10 px-3 py-1 hover:bg-white/20 transition">
               <img src="./assets/default-avatar.png" alt="User" class="w-8 h-8 rounded-full object-cover" id="userAvatar">
-              <span id="userNameHeader" class="text-sm font-medium">الضيف</span>
+              <span id="userNameHeader" class="text-sm font-medium"></span>
             </button>
             <div class="absolute left-0 mt-2 w-40 bg-gray-900/90 rounded-lg shadow-lg hidden" id="userDropdown">
               <a href="profile.html" class="block px-4 py-2 hover:bg-gray-800">الملف الشخصي</a>
@@ -142,6 +82,7 @@
             </div>
           </div>
 
+          <!-- Auth Buttons -->
           <div id="authBtns" class="flex gap-3">
             <a href="signup.html" class="px-4 py-2 rounded-full bg-yellow-400 text-black font-semibold">إنشاء حساب</a>
             <a href="login.html" class="px-4 py-2 rounded-full bg-white/10 hover:bg-white/20 transition">تسجيل الدخول</a>
@@ -176,8 +117,56 @@
     </main>
   </div>
 
+  <!-- Firebase Auth Integration -->
+  <script type="module">
+    import { auth, db } from "./firebase-config.js";
+    import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+    import { doc, getDoc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+
+    const userMenu = document.getElementById("userMenu");
+    const authBtns = document.getElementById("authBtns");
+    const userNameHeader = document.getElementById("userNameHeader");
+    const userBtn = document.getElementById("userBtn");
+    const dropdown = document.getElementById("userDropdown");
+    const logoutBtn = document.getElementById("logoutBtn");
+
+    // Toggle dropdown
+    userBtn?.addEventListener("click", () => dropdown.classList.toggle("hidden"));
+
+    // حالة المستخدم
+    onAuthStateChanged(auth, async (user) => {
+      if (user) {
+        // إخفاء أزرار الدخول
+        authBtns.classList.add("hidden");
+        userMenu.classList.remove("hidden");
+
+        try {
+          const docRef = doc(db, "users", user.uid);
+          const snap = await getDoc(docRef);
+          if (snap.exists()) {
+            const data = snap.data();
+            userNameHeader.textContent = data.name || "مستخدم";
+          } else {
+            userNameHeader.textContent = user.email.split("@")[0];
+          }
+        } catch {
+          userNameHeader.textContent = "مستخدم";
+        }
+      } else {
+        userMenu.classList.add("hidden");
+        authBtns.classList.remove("hidden");
+      }
+    });
+
+    // تسجيل الخروج
+    logoutBtn?.addEventListener("click", async () => {
+      await signOut(auth);
+      window.location.reload();
+    });
+  </script>
+
   <script>
-    // Dropdown toggles
+    // Dropdown toggles for sidebar
     const toggles = [
       {btn: '.pc-toggle', menu: '.pc-submenu'},
       {btn: '.laptop-toggle', menu: '.laptop-submenu'},
@@ -194,11 +183,6 @@
         icon.classList.toggle('open');
       });
     });
-
-    // User menu
-    const userBtn = document.getElementById("userBtn");
-    const dropdown = document.getElementById("userDropdown");
-    userBtn.addEventListener("click", () => dropdown.classList.toggle("hidden"));
   </script>
 </body>
 </html>
