--- a/index.html
+++ b/index.html
@@ -28,13 +28,107 @@
   <div class="min-h-screen flex">
 
     <!-- Sidebar -->
-    <aside class="w-72 bg-gray-900/70 border-r border-white/5 p-4 hidden lg:block">
-      <div class="flex items-center gap-3 mb-6">
-        <div class="w-12 h-12 rounded-lg bg-yellow-400 flex items-center justify-center text-black font-bold">LZ</div>
-        <div>
-          <h1 class="text-lg font-semibold">ليزفار DZ</h1>
-          <p class="text-xs text-gray-400">سوق الأجهزة وقطع الحاسوب</p>
-        </div>
+<aside class="w-72 bg-gray-900/70 border-r border-white/5 p-4 hidden lg:block">
+  <div class="flex items-center gap-3 mb-6">
+    <div class="w-12 h-12 rounded-lg bg-yellow-400 flex items-center justify-center text-black font-bold">LZ</div>
+    <div>
+      <h1 class="text-lg font-semibold">ليزفار DZ</h1>
+      <p class="text-xs text-gray-400">سوق الأجهزة وقطع الحاسوب</p>
+    </div>
+  </div>
+
+  <!-- Navigation -->
+  <nav class="space-y-2 overflow-auto" style="max-height:calc(100vh - 160px);">
+    <button data-filter="all" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">
+      أحدث المنتجات
+    </button>
+
+    <!-- PC -->
+    <div>
+      <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium pc-toggle">
+        <span class="flex items-center gap-2"><span></span> PC</span>
+        <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+      </button>
+      <div class="pc-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">تجميعات</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">كروت شاشة</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">معالجات</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">رامات</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">كروت أم</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">مراوح تبريد</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">SSD / HDD</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">وحدة الطاقة</button>
+      </div>
+    </div>
+
+    <!-- Laptop -->
+    <div>
+      <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium laptop-toggle">
+        <span class="flex items-center gap-2"><span></span> Laptop</span>
+        <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+      </button>
+      <div class="laptop-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">HP</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Dell</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Lenovo</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Asus</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">MSI</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Apple</button>
+      </div>
+    </div>
+
+    <!-- Phones -->
+    <div>
+      <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium phone-toggle">
+        <span class="flex items-center gap-2"><span></span> هواتف</span>
+        <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+      </button>
+      <div class="phone-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Samsung</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Xiaomi</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Huawei</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Oppo</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Infinix</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">iPhone</button>
+      </div>
+    </div>
+
+    <!-- Consoles -->
+    <div>
+      <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium console-toggle">
+        <span class="flex items-center gap-2"><span></span> Consoles</span>
+        <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+      </button>
+      <div class="console-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">PlayStation</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Xbox</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Nintendo</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">Handhelds</button>
+      </div>
+    </div>
+
+    <!-- Accessories -->
+    <div>
+      <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium acc-toggle">
+        <span class="flex items-center gap-2"><span></span> إكسسوارات</span>
+        <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+      </button>
+      <div class="acc-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">فأرة</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">لوحة مفاتيح</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">سماعات</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الحاسوب</button>
+        <button class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الهاتف</button>
+      </div>
+    </div>
+
+    <!-- Screens -->
+    <button data-filter="screens" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">
+       شاشات
+    </button>
+  </nav>
+</aside>
+
       </div>
 
       <!-- Navigation -->
@@ -186,3 +280,4 @@
   </script>
 </body>
 </html>
+
